--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     volumes:
       # Way of mapping directory from our system into docker container
       - ./app:/app
+      - dev-static-data:/vol/web
     # Command that is used to run the service
     command: >
       sh -c "python manage.py wait_for_db &&
@@ -24,6 +25,7 @@ services:
       - DB_NAME=devdb
       - DB_USER=devuser
       - DB_PASS=changeme
+      - DEBUG=1
     # depend_on here tell dockercompose depend db, try to wait db service to start, befor start this app service
     # if db service failed, immediately app gonna fail, and shutdown the app
     depends_on:
@@ -44,3 +46,4 @@ services:
 
 volumes:
   dev-db-data:
+  dev-static-data:
