--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,18 @@
 {
+  "version": 2,
   "builds": [
     {
-      "src": "app/app/wsgi.py",
+      "src": "api/wsgi.py",
       "use": "@vercel/python",
       "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+    },
+    {
+      "src": "static/**/*",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "app/app/wsgi.py"
-    }
+    { "src": "/static/(.*)", "dest": "/static/$1" },
+    { "src": "/(.*)", "dest": "api/wsgi.py" }
   ]
 }
